--- a/5-11-2023/src/app/app.component.html
+++ b/5-11-2023/src/app/app.component.html
@@ -1,5 +1,6 @@
 <html>
   <div class="description">
+    <p> Click to select a note!</p>
     <p>Selected Note: {{selected.title}} : {{selected.content}}</p>
   </div>
   <input class="title" [(ngModel)]="title" placeholder="Note Title"><br>
